--- a/module1/bai_5 HTML Form & Table/Bài Tập/Tao_form_dang_ky_nguoi_dung.html
+++ b/module1/bai_5 HTML Form & Table/Bài Tập/Tao_form_dang_ky_nguoi_dung.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>[Bài tập] Tạo giao diện form đăng ký người dùng</title>
+    <title></title>
 </head>
 <body>
 <form action="http://demo.codegym.vn/6/registration_form/register.php" method="post">
@@ -22,8 +22,7 @@
     <input type="radio" name="gender" id="female">
     <label for="female">Nữ</label><br><br>
     <button >Đăng kí</button>
-
-
+    
 </form>
 </body>
 </html>
