--- a/module1/bai_13 Mang 2/Bài Tập/Luyen_tap_mang_1/Bai_4.html
+++ b/module1/bai_13 Mang 2/Bài Tập/Luyen_tap_mang_1/Bai_4.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>/
-
+<body>
+<script>
+    let arr=[1,3,5,6,7];
+     document.write(arr.reverse());
+</script>
 
 </body>
 </html>
